Changed a lot of the build script to include some new features. Change around some of the apps and configurations.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
 <b><#selectbg_g>UltimaMod - v2.0 Folkvangr</#></b>
 <*>Changed base to CyanogenMod - Should make for quicker updates</*>
+<*>Added Gapps packages in the installer. Many options. Full, lite or custom</*>
 <*>Added call recording as default for all devices (Cyanogen limit this per region, which is unnecessary)</*>
+<*>Added Traffic Meter and controls to SystemUI</*>
+<*>Added Recents panel controls (Clear all button position and RAM bar)</*>
+<*>Added clock option: AM/PM indicator, colour and day of week</*>
+<*>Added F-Droid option in the installer, for those who don't want Google Apps.</*>
+<*>Added DisconnectMobile option in the installer</*>
+<*>Added root options in the installer, including none</*>
