--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 <b><#selectbg_g>UltimaMod - v2.0 Folkvangr</#></b>
-<*>Changed base to CyanogenMod - Should make for quicker updates</*>
+<*>Rebranded to UltimaMod (Ultima CyanogenMOD) </*>
+<*>Changed base to CyanogenMod 11 (latest sources as of build time) - Should make for quicker updates</*>
+<*>Odexed and Deodexed version available in the same zip</*>
 <*>Added Gapps packages in the installer. Many options. Full, lite or custom</*>
 <*>Added call recording as default for all devices (Cyanogen limit this per region, which is unnecessary)</*>
 <*>Added Traffic Meter and controls to SystemUI</*>
@@ -9,3 +11,5 @@
 <*>Added DisconnectMobile option in the installer</*>
 <*>Added root options in the installer, including none</*>
 <*>Added Runtime choice in installer</*>
+<*>Added custom battery icon colours (color, level colors, bolt colours, text colors etc) </*>
+<*>Fixed some Messaging theming issues </*>
